[package]
name = "cdh"
authors = ["allanger <allanger@zohomail.com>"]
version = "0.1.3"
description = "Your helm releases are outdated, aren't they? Now you can check"
edition = "2021"

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
log = "0.4.17"
env_logger = "0.10.0"
version-compare = "0.1.0"
clap = { version = "4.1.1", features = ["derive", "env"] }
serde_yaml = "0.9.16"
tabled = "0.10.0"
handlebars = "4.3.1"
clap_complete = "4.0.6"

